# flask-url-shortener

./: .codacy.yml  .coverage.rc  .gitignore  .travis.yml  README.rst  pyproject.toml  requirements.txt
src/: __init__.py  app.py  app_config.py  db.py  endpoints.py  exceptions.py  models.py  test.db
tests/: __init__.py  curl.py  test_app.py  test_endpoints.py  test_models.py
